--- a/danhsach.html
+++ b/danhsach.html
@@ -249,7 +249,7 @@
                 <div class="badge text-bg-primary text-wrap" style="width: 7rem; font-size: 18px; margin-top: 10px">
                     Cầu Thủ
                 </div>
-                <img src="/img/23" class="img-thumbnail img-fluid" alt="..." width="200px" style="
+                <img src="/img/23.jpg" class="img-thumbnail img-fluid" alt="..." width="200px" style="
               background-size: cover;
               background-position: center;
               margin-top: 10px;
