--- a/danhsach.html
+++ b/danhsach.html
@@ -20,7 +20,7 @@
                 <div class="badge text-bg-primary text-wrap" style="width: 7rem; font-size: 18px; margin-top: 10px">
                     Cầu Thủ
                 </div>
-                <img src="/img/1.jpg" class="img-thumbnail" alt="..." style="margin-top: 10px" />
+                <img src="https://github.com/duocha93/danhsachcauthuDongThuy/assets/105106503/eec1ab19-606d-42e8-bfbe-1baceb64b101" class="img-thumbnail" alt="..." style="margin-top: 10px" />
                 <p class="text-center"><b>Nguyễn Văn Đông</b></p>
                 <p class="text-center"><b>4/1/1988</b></p>
                 <p class="text-center"><b>Số: 88</b></p>
