--- a/danhsach.html
+++ b/danhsach.html
@@ -39,7 +39,9 @@
                     Cầu Thủ
                 </div>
                 <img src="https://github.com/duocha93/danhsachcauthuDongThuy/assets/105106503/b40bd509-1b74-407e-b1c9-2598999cf1cd" class="img-thumbnail" alt="..." style="margin-top: 10px" />
-                <p class="text-center"><b>Nguyễn Bá Cường</b></p>
+                <p class="text-center">
+                    <b><s>Nguyễn Bá Cường</s></b>
+                </p>
                 <p class="text-center"><b>Số: 11</b></p>
             </div>
             <div class="col">
@@ -342,6 +344,38 @@
             " />
                 <p class="text-center"><b>Nguyễn Văn Huyên</b></p>
                 <p class="text-center"><b>1981</b></p>
+                <p class="text-center"><b>Số:</b></p>
+            </div>
+            <div class="col">
+                <div class="badge text-bg-primary text-wrap" style="width: 7rem; font-size: 18px; margin-top: 10px">
+                    Cầu Thủ
+                </div>
+                <img src="/img/23" class="img-thumbnail img-fluid" alt="..." width="200px" style="
+              background-size: cover;
+              background-position: center;
+              margin-top: 10px;
+              border: 1px solid rgb(230, 229, 229);
+              max-width: 100%;
+              height: 40vh;
+            " />
+                <p class="text-center"><b>Nguyễn Văn Huy</b></p>
+                <p class="text-center"><b>1978</b></p>
+                <p class="text-center"><b>Số:</b></p>
+            </div>
+            <div class="col">
+                <div class="badge text-bg-primary text-wrap" style="width: 7rem; font-size: 18px; margin-top: 10px">
+                    Cầu Thủ
+                </div>
+                <img src="/img/23" class="img-thumbnail img-fluid" alt="..." width="200px" style="
+              background-size: cover;
+              background-position: center;
+              margin-top: 10px;
+              border: 1px solid rgb(230, 229, 229);
+              max-width: 100%;
+              height: 40vh;
+            " />
+                <p class="text-center"><b>Nguyễn Văn Trọng</b></p>
+                <p class="text-center"><b>1988</b></p>
                 <p class="text-center"><b>Số:</b></p>
             </div>
         </div>
