--- a/danhsach.html
+++ b/danhsach.html
@@ -350,7 +350,7 @@
                 <div class="badge text-bg-primary text-wrap" style="width: 7rem; font-size: 18px; margin-top: 10px">
                     Cầu Thủ
                 </div>
-                <img src="/img/23" class="img-thumbnail img-fluid" alt="..." width="200px" style="
+                <img src="https://github.com/duocha93/danhsachcauthuDongThuy/assets/105106503/1dabfe42-d351-4901-a3db-5bba408134cb" class="img-thumbnail img-fluid" alt="..." width="200px" style="
               background-size: cover;
               background-position: center;
               margin-top: 10px;
